Fix gap between header and main section

--- a/src/assets/css/styles.css
+++ b/src/assets/css/styles.css
@@ -899,7 +899,7 @@ a.Title:hover,
 
 .Header {
   width: 100%;
-  height: 3.5rem;
+  /* height: 3.5rem; */
   padding: 0.75rem;
   position: relative;
   background: #023767;
